fixed custom cursor disappearing on firefox

--- a/styles/_cursor.scss
+++ b/styles/_cursor.scss
@@ -53,8 +53,13 @@
   }
 }
 
-@media only screen and (hover: none) and (pointer: coarse) {
+@media only screen and (max-device-width: 480px) and (orientation: portrait) and (hover: none) and (pointer: coarse) {
   .cursor-wrapper {
-    display: none;
+    display: none !important;
+  }
+}
+@media screen and (max-device-width: 640px) and (orientation: landscape) and (hover: none) and (pointer: coarse) {
+  .cursor-wrapper {
+    display: non !important;
   }
 }
